# DIME

./: .gitignore  README.md  dime.cabal
doc/: DIME.tex  Flow.html
doc/flow/: example1.flow
src/: DataServer.hs  Server.hs  SimpleDataClient.hs  WebServer.hs
src/Data/List/: Collect.hs  Collect.hs~
src/Data/Tree/: DisjointIntervalTree.hs
src/Database/: DIME.hs
src/Database/DIME/: Config.hs  DataServer.hs  Flow.hs  NameServer.hs  Scheme.hs  Server.hs  TableMapper.hs  Transport.hs  Util.hs
src/Database/DIME/DataServer/: Command.hs  Config.hs  Response.hs  State.hs
src/Database/DIME/Flow/: Builtin.hs  TimeSeries.hs  Types.hs
src/Database/DIME/Memory/: Block.hs  BlockInfo.hs  Operation.hs  State.hs
src/Database/DIME/Memory/Operation/: Collapsible.hs  Double.hs  Int.hs  Mappable.hs  String.hs
src/Database/DIME/Server/: Config.hs  HttpError.hs  Peers.hs  State.hs  TimeSeriesApp.hs  Util.hs
src/Database/DIME/Util/: RangeTree.hs
src/Language/Flow/: AST.hs  Builtin.hs  Compile.hs  Module.hs  Parse.hs  Util.hs
src/Language/Flow/Execution/: .#GCode.hs  GCode.hs  GMachine.hs  Types.hs
src/Language/Flow/Lambda/: Enriched.hs
